<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="IP233" Id="{93f9c0b3-2b7a-4d18-a3d1-1ff3113c29af}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM IP233
VAR
	timer				: TON;
	nState				: INT := STATE_INIT;
	
	fbInit233_01_5350			: FB_InitPM;
	fbInit233_03_5350			: FB_InitPM;
	fbInit233_05_5350			: FB_InitPM;
	fbInit233_07_5350			: FB_InitPM;
	fbInit233_08_5350			: FB_InitPM;
	
	fbRead233_01_5350			: FB_ReadPM5350;
	fbRead233_03_5350			: FB_ReadPM5350;
	fbRead233_05_5350			: FB_ReadPM5350;
	fbRead233_07_5350			: FB_ReadPM5350;
	fbRead233_08_5350			: FB_ReadPM5350;
	
	fbInit233_02_5500			: FB_InitPM;
	fbInit233_04_5500			: FB_InitPM;
	fbInit233_06_5500			: FB_InitPM;
	
	fbRead233_02_5500			: FB_ReadPM5500;
	fbRead233_04_5500			: FB_ReadPM5500;
	fbRead233_06_5500			: FB_ReadPM5500;
	
	nCount						: DINT;
END_VAR

VAR CONSTANT
	STATE_INIT			:	INT		:= 0;
	STATE_WAIT_CMD		: 	INT		:= 5;
	STATE_READ1			:	INT		:= 10;
	STATE_READ3			:	INT		:= 30;
	STATE_READ5			:	INT		:= 50;
	STATE_READ7			:	INT		:= 70;
	STATE_READ8			:	INT		:= 80;
	STATE_READ2			:	INT		:= 20;
	STATE_READ4			:	INT		:= 40;
	STATE_READ6			:	INT		:= 60;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[CASE nState OF
	STATE_INIT:
		fbInit233_01_5350(	sIpAddress	:= '10.91.37.233',
							nPort		:= 502,
							nUnitID		:= 1,
							PM			:= pmDev.DB03_01_5350);
		fbInit233_03_5350(	sIpAddress	:= '10.91.37.233',
							nPort		:= 502,
							nUnitID		:= 3,
							PM			:= pmDev.DB03_03_5350);
		fbInit233_05_5350(	sIpAddress	:= '10.91.37.233',
							nPort		:= 502,
							nUnitID		:= 5,
							PM			:= pmDev.DB03_05_5350);
		fbInit233_07_5350(	sIpAddress	:= '10.91.37.233',
							nPort		:= 502,
							nUnitID		:= 7,
							PM			:= pmDev.DB03_07_5350);
		fbInit233_08_5350(	sIpAddress	:= '10.91.37.233',
							nPort		:= 502,
							nUnitID		:= 8,
							PM			:= pmDev.DB03_08_5350);
							
		fbInit233_02_5500(	sIpAddress	:= '10.91.37.233',
							nPort		:= 502,
							nUnitID		:= 2,
							PM			:= pmDev.DB03_02_5500);
		fbInit233_04_5500(	sIpAddress	:= '10.91.37.233',
							nPort		:= 502,
							nUnitID		:= 4,
							PM			:= pmDev.DB03_04_5500);
		fbInit233_06_5500(	sIpAddress	:= '10.91.37.233',
							nPort		:= 502,
							nUnitID		:= 6,
							PM			:= pmDev.DB03_06_5500);
								
		timer(In:=TRUE, PT:= TIME_INIT);
		IF timer.Q THEN
			timer(In:= FALSE);
			nState	:= STATE_WAIT_CMD;
		END_IF
		
	STATE_WAIT_CMD:
			;
			
	STATE_READ1:
		fbRead233_01_5350(
			bExecute:=TRUE,
			PM:= pmDev.DB03_01_5350);
		IF NOT fbRead233_01_5350.Q THEN
			nState	:= STATE_READ3;
			fbRead233_01_5350(
				bExecute:=FALSE,
				PM:= pmDev.DB03_01_5350);
		END_IF
		
	STATE_READ3:
		fbRead233_03_5350(
			bExecute:=TRUE,
			PM:= pmDev.DB03_03_5350);
		IF NOT fbRead233_03_5350.Q THEN
			nState	:= STATE_READ5;
			fbRead233_03_5350(
				bExecute:=FALSE,
				PM:= pmDev.DB03_03_5350);
		END_IF	
	
	STATE_READ5:
		fbRead233_05_5350(
			bExecute:=TRUE,
			PM:= pmDev.DB03_05_5350);
		IF NOT fbRead233_05_5350.Q THEN
			nState	:= STATE_READ7;
			fbRead233_05_5350(
				bExecute:=FALSE,
				PM:= pmDev.DB03_05_5350);
		END_IF	
		
	STATE_READ7:
		fbRead233_07_5350(
			bExecute:=TRUE,
			PM:= pmDev.DB03_07_5350);
		IF NOT fbRead233_07_5350.Q THEN
			nState	:= STATE_READ8;
			fbRead233_07_5350(
				bExecute:=FALSE,
				PM:= pmDev.DB03_07_5350);
		END_IF	
		
	STATE_READ8:
		fbRead233_08_5350(
			bExecute:=TRUE,
			PM:= pmDev.DB03_08_5350);
		IF NOT fbRead233_08_5350.Q THEN
			nState	:= STATE_READ2;
			fbRead233_08_5350(
				bExecute:=FALSE,
				PM:= pmDev.DB03_08_5350);
		END_IF	
		
	STATE_READ2:
		fbRead233_02_5500(
			bExecute:=TRUE,
			PM:= pmDev.DB03_02_5500);
		IF NOT fbRead233_02_5500.Q THEN
			nState	:= STATE_READ4;
			fbRead233_02_5500(
				bExecute:=FALSE,
				PM:= pmDev.DB03_02_5500);
		END_IF
	STATE_READ4:
		fbRead233_04_5500(
			bExecute:=TRUE,
			PM:= pmDev.DB03_04_5500);
		IF NOT fbRead233_04_5500.Q THEN
			nState	:= STATE_READ6;
			fbRead233_04_5500(
				bExecute:=FALSE,
				PM:= pmDev.DB03_04_5500);
		END_IF
	
	STATE_READ6:
		fbRead233_06_5500(
			bExecute:=TRUE,
			PM:= pmDev.DB03_06_5500);
		IF NOT fbRead233_06_5500.Q THEN
			nState	:= STATE_WAIT_CMD;
			fbRead233_06_5500(
				bExecute:=FALSE,
				PM:= pmDev.DB03_06_5500);
		END_IF
		
END_CASE
	
	
	
]]></ST>
    </Implementation>
    <Property Name="Busy" Id="{05e321e0-c782-40cd-b022-4e332d95eb0e}">
      <Declaration><![CDATA[PROPERTY Busy : Bool]]></Declaration>
      <Get Name="Get" Id="{1c921cb1-ec9f-476c-815a-ef682a852b83}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[Busy := nState <> STATE_WAIT_CMD; ]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="Mr_Read" Id="{8d8d6c5c-b2ef-4017-b466-562e185e890f}">
      <Declaration><![CDATA[METHOD Mr_Read : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF nState = STATE_WAIT_CMD THEN
	nState := STATE_READ1;
END_IF]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="IP233">
      <LineId Id="115" Count="1" />
      <LineId Id="264" Count="31" />
      <LineId Id="255" Count="0" />
      <LineId Id="296" Count="0" />
      <LineId Id="256" Count="7" />
      <LineId Id="117" Count="89" />
      <LineId Id="208" Count="1" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="IP233.Busy.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="IP233.Mr_Read">
      <LineId Id="5" Count="2" />
    </LineIds>
  </POU>
</TcPlcObject>